2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

        PR classpath/33385:
	* tools/com/sun/tools/javac/Main.java:
	Add bootclasspath and 1.5 options so the compiler
	can run.
	
2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/33622:
	* lib/Makefile.am: Use JAVAC_ARGS variable.
	* m4/acinclude.m4: Check javac is 1.5 compliant
	and whether it supports -J.
	
2007-10-12  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/swing/text/html/css/FontSize.java (mapPercent): 
	(mapPoints): prevent a NumberFormatException when a floating point is given
	instead of a integer.
	(mapPixels): likewise.
	(mapPercent): likewise.

2007-10-12  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/sound/AudioSecurityManager.java: Added Copyright header.
	(Permission): added missing javadoc.
	(checkPermissions): likewise.

2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/33622:
	* lib/Makefile.am: Add -J-mX512M option to
	allow javac enough memory to build Classpath.

2007-10-12  Roman Kennke  <roman.kennke@aicas.com>

	* NEWS: Added entry for Escher peers.

2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Updated for 0.96

2007-10-12  Robin Garner  <robin.garner@anu.edu.au>

	PR classpath/32541:
	* java/io/OutputStreamWriter.java:
	Provide buffering when not converting to improve
	performance.
	
2007-10-12  Ian Rogers  <ian.rogers@manchester.ac.uk>

	PR classpath/33746:
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c:
	Remove atexit call that makes JikesRVM deadlock.
	
2007-10-12  Ian Rogers  <ian.rogers@manchester.ac.uk>
2007-10-12  Andrew Haley  <aph@redhat.com>

	PR classpath/33741:
	* java/lang/Double.java:
	(compare(double,double)): Increase performance
	of this method.
	* java/lang/Float.java:
	(compare(float,float)): Likewise.
	
2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/33623:
	* m4/acinclude.m4:
	Fix typo which prevents --with-ecj being used.
