@@ -1,3 +1,9 @@
+2007-10-15  Roman Kennke  <roman.kennke@aicas.com>
+
+	* java/awt/LightweightDispatcher.java
+	(dispatchEvent): Don't synchronize on the AWT lock here,
+	this causes a deadlock in some situations.
+
 2007-10-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
         PR classpath/33385:
